test/Fail/LetAbstract.agda
module LetAbstract where

_ =
  let
    abstract
      x : Set _
      x = Set
  in x
